# execpp

./: .ccls  CMakeLists.txt  README.md  build.sh
include/: exec.cc  exec.hh
src/: main.cpp
